<resources>
    <string name="app_name">WorldBuilding</string>
    <string name="universoButtonText">Entrar</string>
    <string name="TituloUniverso">Titulo</string>
    <string name="CategoriaMainLabel">Categorias</string>
    <string name="CategoriaDefaultLabel">Categoria</string>
    <string name="ViewTituloPrincipal" >Titulo</string>
    <string name="CategoriaFragmentTitulo">existe</string>
    <string name="DiagramasMainLabel">Diagramas</string>
    <string name="StoryLinesMainLabel">Story Lines</string>
    <string name="DiagramaViewButton">Entrar</string>
    <string name="SubCategoria">Sub-Categorias</string>
    <string name="ordenar">ordenar</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">modificar</string>
    <string name="ModificarUniverso">Modificar Universo</string>
    <string name="renombrar">Renombrar</string>
    <string name="registerbtn">registrar</string>
    <string name="sing_in">iniciar</string>
    <string name="loginApps">logear con</string>
    <string name="tvRecording">recordar</string>
    <string name="passwordHint">Pon la contraseña</string>
    <string name="userHint">Introduce Nombre Usuario</string>
    <string name="login">login</string>
    <string name="errorEmailEmpty">Email vacio</string>
    <string name="errorPasswordEmpty">Contraseña vacia</string>
    <string name="errorEmailInvalid">Email invalido</string>
    <string name="errorPasswordInvalid">passowrd invalida</string>
    <string name="errorLoginOnFail">No se pudo logear</string>
    <string name="error">La conexion se perdio</string>
    <string name="RegisterNombreUsuario">Nombre de Usuario</string>
    <string name="RegisterCorreoUsuario">Dame el correo del usuario</string>
    <string name="RegisterPasswordUsuario">Contraseña del usuario</string>
    <string name="registroTitle">Registro</string>
    <string name="errorPasswordNoCoindice">La password no coincide</string>
    <string name="errorUsuarioEmpty">El usuario esta vacio</string>
    <string name="errorUsuarioInvalido">usuario invalido</string>
    <string name="name_channel">notificaciones</string>
    <string name="title_rename_categoria">Renombrar categoria</string>
    <string name="nombre_Categoria">¿Como quieres llamarla?</string>
    <string name="key_help_point">help</string>
    <string name="key_rigtone">rigtone</string>
    <string name="editUser">editar usuario</string>
    <string name="sync_title">Sincronizar datos</string>
    <string name="notification_header">Notificacion</string>
    <string name="ringtone">rigtone</string>
    <string name="rigtone_notifacation">rigton notification</string>
    <string name="help_category">ayuda</string>
    <string name="help_point">guias</string>
    <string name="tono">Elige un tono</string>
    <string name="eliminarTodasCategorias">DLC</string>
    <string name="eliminarTodosLosUniverso">DLT</string>
    <string name="olvidarDatosInicio">ovd</string>
    <string name="ok">ok</string>
    <string name="no">no</string>
    <string name="eliminarCategorias">eliminar categorias</string>
    <string name="olvidame">olvidar datos</string>
    <string name="coloresNotification">colores de la notificacion</string>
    <string name="iconos" />
    <string name="nav_bar_open">open</string>
    <string name="nav_bar_close">close</string>
</resources>